0028558: Test bugs modalg_6 bug26150_17 is failed with FPE switched on

Avoid division by zero in the method BRepFill_CompatibleWires::SameNumberByACR.